<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gastronomia.OndeComer"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/imgBtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logoboqueixon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoboqueixon"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvTurismoBoqueixon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/imgBtLogo"
        android:fontFamily="@font/nothing_you_could_do"
        android:text="@string/turismo_de_boqueix_n"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/menuHamburguesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/botonmenu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_hamburguesa" />


    <TextView
        android:id="@+id/tvOndeComer"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nothing_you_could_do"
        android:gravity="center"
        android:text="@string/ondeComer"
        android:textColor="@color/blueBoqueixonTitulos"
        android:textSize="34sp"
        android:textStyle="bold" />




    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tvOndeComer"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/tvClasificacionParroquias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/clasificacionParroquias" />

            <TextView
                android:id="@+id/tvcodeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/codeso" />

            <ImageView
                android:id="@+id/imgrestauranteOBalado"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/restOBaladoNome"
                app:srcCompat="@mipmap/restobalado" />

            <TextView
                android:id="@+id/tvLamas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/lamas" />

            <ImageView
                android:id="@+id/imgrestParrilladaCasaBrea"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/restParrilladaCasaBreaNome"
                app:srcCompat="@mipmap/restparrilladacasabrea" />

            <TextView
                android:id="@+id/tvLestedo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/lestedo" />

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel3"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


            <TextView
                android:id="@+id/tvLedesma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/ledesma" />

            <ImageView
                android:id="@+id/imgrestauranteDonSancho"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/restDonSanchoNome"
                app:srcCompat="@mipmap/restdonsancho" />



            <TextView
                android:id="@+id/tvSergude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/sergude" />

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel4"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


            <TextView
                android:id="@+id/tvVigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/vigo" />

            <ImageView
                android:id="@+id/parrilladaACruz"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/restParrilladaACruzNome"
                app:srcCompat="@mipmap/restparrilladaacruz" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>