<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".gastronomia.OutrosEstablecementos"
    android:padding="20dp">

<ImageButton
    android:id="@+id/imgBtLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:backgroundTint="#FFFFFF"
    android:contentDescription="@string/logoboqueixon"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/logoboqueixon"
    tools:ignore="TouchTargetSizeCheck" />

<TextView
    android:id="@+id/tvTurismoBoqueixon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginStart="-8dp"
    android:layout_marginTop="40dp"
    android:layout_toEndOf="@+id/imgBtLogo"
    android:fontFamily="@font/nothing_you_could_do"
    android:text="@string/turismo_de_boqueix_n"
    android:textColor="#000000" />

<ImageButton
    android:id="@+id/menuHamburguesa"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="20dp"
    android:background="#FFFFFF"
    android:contentDescription="@string/botonmenu"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/menu_hamburguesa" />

<TextView
    android:id="@+id/tvOutrosEstablecementos"
    android:layout_width="280dp"
    android:layout_height="50dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="100dp"
    android:fontFamily="@font/nothing_you_could_do"
    android:gravity="center"
    android:text="@string/outrosEstablecementos"
    android:textColor="@color/blueBoqueixonTitulos"
    android:textSize="34sp"
    android:textStyle="bold" />




<ScrollView
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_below="@id/tvOutrosEstablecementos"
    android:layout_marginRight="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tvClasificacionParroquias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/clasificacionParroquias" />

        <TextView
            android:id="@+id/tvBoqueixon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/boqueixon" />

        <ImageView
            android:id="@+id/imgBoQueixo"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/queixeriaBoQueixo"
            app:srcCompat="@mipmap/boqueixo" />

        <TextView
            android:id="@+id/tvCamporrapado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/camporrapado" />

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carousel4"
            android:layout_width="match_parent"
            android:layout_height="256dp"/>



        <TextView
            android:id="@+id/tvLestedo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/lestedo" />

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carousel3"
            android:layout_width="match_parent"
            android:layout_height="256dp"/>



        <TextView
            android:id="@+id/tvSergude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/sergude" />


        <ImageView
            android:id="@+id/imgPanaderiaFachal"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/panaderiaFachal"
            app:srcCompat="@mipmap/panaderiafachal" />


    </LinearLayout>
</ScrollView>
</RelativeLayout>