<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:padding="20dp"
    tools:context=".QueFacer">

    <ImageButton
        android:id="@+id/logoboqueixon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logoboqueixon"
        app:srcCompat="@drawable/logoboqueixon"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/logoboqueixon"
        android:fontFamily="@font/nothing_you_could_do"
        android:text="@string/turismo_de_boqueix_n"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/menuHamburguesa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/botonmenu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:srcCompat="@drawable/menu_hamburguesa" />

    <TextView
        android:id="@+id/relixiosas"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="relixiosas"
        android:fontFamily="@font/nothing_you_could_do"
        android:gravity="center"
        android:text="@string/relixiosas"
        android:textColor="@color/blueBoqueixonTitulos"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="30dp">

        <ExpandableListView
            android:id="@+id/expendableList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/background_light"
            android:dividerHeight="0.5dp" />

    </RelativeLayout>

</RelativeLayout>
